manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: hotstar

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: rohsun/hotstar-backend:101

        ports:
        - containerPort: 8000


        livenessProbe:

          httpGet:
            path: /
            port: 8000

          initialDelaySeconds: 10
          periodSeconds: 10


        readinessProbe:

          httpGet:
            path: /
            port: 8000

          initialDelaySeconds: 5
          periodSeconds: 5



---

apiVersion: v1
kind: Service

metadata:

  name: backend-service

  namespace: hotstar


spec:

  selector:

    app: backend


  ports:

  - protocol: TCP

    port: 8000

    targetPort: 8000
